RESOLVED FIXED107055
[WK2] WebProcess should not access ~/Library/Caches/com.apple.WebProcess
https://bugs.webkit.org/show_bug.cgi?id=107055
Summary [WK2] WebProcess should not access ~/Library/Caches/com.apple.WebProcess
Alexey Proskuryakov
Reported 2013-01-16 15:20:32 PST
This sandbox rule is appears obsolete, but we started doing this again because of some NetworkProcess refactoring.
Attachments
proposed patch (3.25 KB, patch)
2013-01-16 15:22 PST, Alexey Proskuryakov
andersca: review+
Alexey Proskuryakov
Comment 1 2013-01-16 15:22:32 PST
Created attachment 183042 [details] proposed patch
Alexey Proskuryakov
Comment 2 2013-01-16 15:25:26 PST
Note You need to log in before you can comment on or make changes to this bug.