        WebProcess should not access ~/Library/Caches/com.apple.WebProcess         https://bugs.webkit.org/show_bug.cgi?id=107055

Reviewed by Anders Carlsson.

        * WebProcess/com.apple.WebProcess.sb.in: Remove the rule allowing access.

        * WebProcess/mac/WebProcessMac.mm: (WebKit::WebProcess::platformInitializeWebProcess):
        Use a correct cache directory even if NetworkProcess is in use. Not all loading has
        moved to this process yet.



Canonical link: https://commits.webkit.org/125306@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@139931 268f45cc-cd09-0410-ab3c-d52691b4dbfc